@@ -69,7 +69,7 @@ import java.sql.*;
 */
 public class MUD extends Thread implements MudHost
 {
-	private static final String	  HOST_VERSION	= "5.10.4.0";
+	private static final String	  HOST_VERSION	= "5.10.4.1";
 
 	private static enum MudState
 	{
