@@ -2122,7 +2122,7 @@ Display or change your prompt string.  Typing PROMPT DEFAULT will reset \
 your prompt to the default setting.  You can enter PROMPT ^^N to effectively \
 turn "off" your prompt. \n\r\
 Valid embedded codes for custom prompts include:\n\r\
-%h :  Current hits        %m :  Current mana        %v :  Current moves     \n\r\
+%h :  Current hits*       %m :  Current mana*       %v :  Current moves*    \n\r\
 %H :  Maximum hits        %M :  Maximum mana        %V :  Maximum moves     \n\r\
 %p :  Actions rem/tick    %P :  Maximum action pts  %l :  % area visited    \n\r\
 %x :  Current experience  %X :  Needed experience   %L :  % world visited   \n\r\
@@ -2134,9 +2134,10 @@ Valid embedded codes for custom prompts include:\n\r\
 %t :  Time of day         %T :  Hour of the day     %ZL:  Area Med. level   \n\r\
 %z :  Current area name   %r :  Room name           %R :  Room ID (ADMIN)   \n\r\
 %y :  Common skill % prog %Y :  Comm.skill time/rem %u :  Skills on cooldown\n\r\
-%Kh:  Tanks current hits  %Km:  Tanks current mana  %Kv:  Tanks curr. moves \n\r\
+%Kh:  Tanks current hits* %Km:  Tanks current mana* %Kv:  Tanks curr. moves*\n\r\
 %KH:  Tanks maximum hits  %KM:  Tanks maximum mana  %KV:  Tanks maxi. moves \n\r\
 %Ke:  Tanks name          %KE:  Tanks health        %j :  Group size/%J: max\n\r\
+* Supports adding another % after the letter to show percentage.\n\r\
 ^HMISC:^N\n\r\
 %/ :  Begin/End combat-only section -- %\\ :  Begin/End non-combat sect.\n\r\
 %fFACTION NAME : Faction value as pct. %FfACTION NAME : Faction value as text\n\r\
